<resources>
    <string name="facebook_app_id">186337808943824</string>
    <string name="fb_login_protocol_scheme">fb186337808943824</string>
    <string name="inicio">Inicio</string>
    <string name="app_name">Pericos Tec</string>
    <string name="noticias">Noticias</string>
    <string name="contacto">Contacto</string>
    <string name="ofertaeducativa">Oferta Educativa</string>
    <string name="vinculacion">Vinculación</string>
    <string name="todo">TODO</string>
    <string name="tecnologico">Tecnológico</string>
    <string-array name="horarios">
        <item>Sistemas</item>
        <item>Alimentarias</item>
        <item>Forestal</item>
        <item>Geociencias</item>
        <item>Gestion</item>
        <item>Gestion (Escolarizado)</item>
    </string-array>
    <string name="estudiantes">Estudiantes</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="Page1Title" />
    <string name="Page2Title" />
    <string name="Page3Title" />
    <string name="Page4Title" />
    <string name="Page5Title" />
    <string name="Page6Title" />
    <string name="Page7Title" />
    <string name="Page1Message" />
    <string name="Page2Message" />
    <string name="Page3Message" />
    <string name="Page4Message" />
    <string name="Page5Message" />
    <string name="Page6Message" />
    <string name="Page7Message" />
    <string name="textview">TextView</string>
    <string name="title_activity_fullscreen">Panteras ITSH</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="iniciar">Iniciar</string>
    <string name="panteras">Panteras</string>
    <string name="contacto_itsvc">Contacto ITSVC</string>
    <string name="boletines">Boletines ITSH</string>
    <string name="verde">Verde</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <string name="Isa">TextView</string>
    <string name="contactanos">Contactanos</string>
    <string name="portal_web">Portal web</string>
    <string name="title_activity_actionbar">Si es esta</string>
    <string name="opciones">Opciones</string>
    <string name="configuraciones_action">configuraciones action</string>
    <string name="avisos">Avisos</string>
    <string name="numero_de_control">Numero de control</string>
    <string name="clave_de_acceso">Clave de acceso</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_aspirantestab">AspirantestabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requisitos">Requisitos</string>
    <string name="modalidad_de_estudios">Modalidad</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Guardar</string>
    <string name="oferta_educativa">Oferta educativa</string>
    <string name="title_activity_scrolling_requisitos">ScrollingRequisitosActivity</string>
    <string name="descripcion_requisitos_parte1">"Consula la convocatoria para examen de admisión Agosto-Diciembre 2019."</string>
    <string name="descripcion_requisitos_parte2">
        "Los requisitos para la ficha del examen de admisión son:"
    </string>
    <string name="descripcion_requisitos_parte3">
        "• Certificado de bachillerato (copia) o constancia de estudios de Nivel Medio Superior que indique\n"
        "que se está cursando el sexto semestre(original y copia)\n"
        "• Acta de nacimiento (copia)\n"
        "• CURP (copia)\n"
    </string>
    <string name="descripcion_requisitos_parte4">
        "• 3 fotografías tamaño infantil (recientes)\n"
        "• Recibo de pago por concepto de ficha para examen de admisión $360.00 M.N.\n"
        "(Seguir el procedimiento de pago, da click en el siguiente vinculo)\n"
    </string>
    <string name="descripcion_requisitos_parte5">
        "Descarga, imprime y llena la "Solicitud de Ficha para examen de admisión" (opcional a fin de"
        "agilizar el trámite, de lo contrario llenarlo al momento de acudir al Departamento de Control"
        "Escolar en el Instituto)."
    </string>
    <string name="descripcion_requisitos_parte6">
"7 Bachilleratos de la región tienen PASE AUTOMÁTICO al Tecnológico, es decir sin realizar examen"
" de admisión, lo anterior autorizado por nuestra Junta de Gobierno y fundamentado en la"
" cantidad de alumnos que nos aportan año con año. Los Bachilleratos son:"
    </string>
    <string name="descripcion_requisitos_parte7">
        "• CBTis 86 de Huauchinango\n"
        "• Colegio de Bachilleres de Huauchinango\n"
        "• Preparatoria Albert Einstein de Necaxa\n"
        "• Preparatoria Benito Juárez de Huauchinango\n"
    </string>
    <string name="descripcion_requisitos_parte8">
        "• Colegio de Bachilleres de Xicotepec\n"
        "• Centro Escolar de Huauchinango\n"
        "• Y Conalep Huauchinango\n\n"
        "• Para aplicar el pase automático deben tener promedio mínimo de 8 y realizar el trámite para examen de admisión."

    </string>
    <string name="descripcion_requisitos_parte9">
    "El Centro Nacional de Evaluación para la Educación Superior, A.C. (CENEVAL) ha puesto a disposición"
    " la guía interactiva que tiene como finalidad fortalecer la preparación para el Examen, en donde"
    " podrá consultar la estructura del mismo, los contenidos a evaluar, los tipos de reactivos que"
    " verán en él y lo que debe hacer antes del día del examen, además de un Ejercicio de entrenamiento"
    " del Examen de Admisión y al término de la misma, les brinda un resultado inclusive, esto a fin de"
    " que los aspirantes puedan descargarla en sus computadores y trabajar con ella en la siguiente liga:"
    </string>
    <string name="descripcion_requisitos_parte10">
    "En el siguiente enlace puedes descargar la guía de estudio para el examen de admisión.\n\n\n"

</string>
    <string name="descripcion_requisitos_parte11">
        "El CENEVAL ha puesto a disposición la liga para descargar la Guía de EXANI (Examen Nacional de"
        " Ingreso a la Educación Superior, 23a. Edición 2018) en la siguiente dirección:"
    </string>
    <string name="descripcion_requisitos_parte12">
        "Después de este primer proceso, se darán indicaciones para la inscripción, se van a requerir más"
        " documentos y pagos por concepto de: INSCRIPCIÓN $1,440.00, CURSO PROPEDEUTICO $185.00 y $80.00"
        " por tu CREDENCIAL ESCOLAR; checa tu promedio para aplicar a los siguientes descuentos:"
    </string>
    <string name="descripcion_requisitos_parte13">
        "• Promedio de 8.5 a 8.9: 25% de descuento en inscripción.\n"
        "• Promedio de 9.0 a 9.4: 50% de descuento en inscripción.\n"
        "• Promedio de 9.5 a 10.0: 100% de descuento en inscripción.\n"
    </string>
    <string name="descarga_aqui_tu_solicitud_de_ficha_para_examen_de_admisi_n">DESCARGA AQUI TU SOLICITUD DE FICHA PARA EXAMEN DE ADMISIÓN.</string>
    <string name="marcacion">Mayor información al 776 76 2 60 33.</string>
    <string name="si_ya_presentaste_examen_de_admisi_n_da_clic_aqui_y_revisa_los_requisitos_de_inscripci_n">SI YA PRESENTASTE EXAMEN DE ADMISIÓN, DA CLIC AQUI Y REVISA LOS REQUISITOS DE INSCRIPCIÓN.</string>
    <string name="_7767626033">7767626033</string>
    <string name="mayor_informaci_n_al">Mayor información al:</string>
    <string name="preguntas_frecuentes_para_nuevo_ingreso">Preguntas frecuentes para nuevo ingreso</string>
    <string name="procedimiento_para_generar_orden_de_cobro">Procedimiento para generar orden de cobro</string>
    <string name="descripcionmodalidaddeestudios">
        "En el Tec Huauchinango contamos con dos modalidades de estudio para que puedas terminar"
        una carrera profesional aún si estás trabajando."
    </string>
    <string name="descripcionmodalidaddeestudios2">
        "Sistema escolarizado de Lunes a Viernes:
    </string>
    <string name="descripcionmodalidaddeestudios3">
        "• Ingeniería Eléctrica.\n"
        "• Ingeniería Industrial.\n"
        "• Ingeniería en Sistemas Computacionales.\n"
        "• Ingeniería Informática.\n"
        "• Ingeniería Mecatrónica.\n"
        "• Ingeniería en Administración."
    </string>
    <string name="descripcionmodalidaddeestudios4">
        "  Educación a distancia, modalidad semipresencial:\n"
        "  (Sábados de 7:00 a 16:00 hrs.)\n\n"
    </string>
    <string name="descripcionmodalidaddeestudios5">

        "• Ingeniería Eléctrica.\n"
        "• Ingeniería Administración.\n"
        "• Ingeniería Industrial.\n"
        "• Ingeniería en Sistemas Computacionales."
    </string>
    <string name="descripcionbecastitulo">
        "El Tec Huauchinango cuenta con un amplio programa de becas para sus alumnos, destacan:"
    </string>
    <string name="descripcionbecas">
        "Beca de Excelencia para Bachilleratos."
    </string>
    <string name="descripcionbecas2">
        "Si tienes de 8.5 en adelante en tu promedio"
        "de bachillerato puedes aspirar a descuentos en la inscripción:"</string>
    <string name="descripcionbecas3">
        "• Promedio de 8.5 a 8.9: 25% de descuento en inscripción.\n"
        "• Promedio de 9.0 a 9.4: 50% de descuento en inscripción.\n"
        "• Promedio de 9.5 a 10.0: 100% de descuento en inscripción.\n"</string>
    <string name="descripcionbecas4">
    "Becas diversas de la SEP."</string>
    <string name="descripcionbecas5">
        "I. Servicio Social\n"
        "II. Residencia Profesional\n"
        "III. Titulación\n"</string>
    <string name="proposito_titulo">Propósito</string>
    <string name="egreso_programa_titulo">Perfil de Egreso</string>
    <string name="especialidad_titulo">Especialidad</string>
    <string name="reticula">Reticula</string>
    <string name="titulo_forestal">Ingeniería Forestal</string>
    <string name="clave_forestal">IFOR–2010–226</string>
    <string name="proposito_forestal">
        "Formar seres sociales con desarrollo integral mediante la generación y apropiación del "
        "conocimiento científico, tecnológico y cultural orientado a responder los requerimientos "
        "del desarrollo forestal sostenible de la nación, mediante la formación de profesionales "
        "con capacidad técnica, analítica, científica, tecnológica y emprendedora, para el manejo "
        "sustentable de los recursos forestales en beneficio de la sociedad, con ética y valores."
    </string>
    <string name="perfil_egreso_forestal_1">
        "Elaborar, implementar, evaluar y monitorear programas de manejo sustentable de los ecosistemas forestales."
    </string>
    <string name="perfil_egreso_forestal_2">
        "Promover el desarrollo de la cultura de manejo sustentable de los recursos forestales."
    </string>
    <string name="perfil_egreso_forestal_3">
        "Asesorar en los procesos de transformación y comercialización de los productos forestales "
        "para generar valor agregado."
    </string>
    <string name="perfil_egreso_forestal_4">
        "Participar en la investigación, generación y transferencia de tecnología apropiada para "
        "impulsar el crecimiento de la productividad y competitividad del área forestal."
    </string>
    <string name="especialidad_forestal">"Especialidad en Seguridad e Inocuidad en la Industria Alimentaria."
    </string>
    <string name="Empresa">Empresa</string>
    <string name="Objeto">Objeto</string>
    <string name="Vigencia">Vigencia</string>
    <string name="Inicio">Inicio</string>
    <string name="Terminacion">Terminacion</string>
    <string name="Sector">Sector</string>
    <string name="Giro">Giro</string>
    <string name="Con1Em">
        "INSTITUTO TECNOLOGICO SUPERIOR DEL ORIENTE DEL ESTADO DE HIDALGO"</string>
</resources>