<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/Empresa"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/textView14"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/Sector"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/textView15"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/Giro"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/textView16"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/Objeto"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/textView17"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/Vigencia"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView15"
                android:layout_alignStart="@+id/textView14"
                android:layout_alignParentEnd="false"
                android:layout_toStartOf="@+id/textView22"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView18"
                android:layout_toStartOf="@+id/textView23"
                android:background="@color/colorPrimary"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/Inicio"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView18"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:background="@color/colorPrimary"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/Terminacion"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/Con1Em"
                android:textSize="10sp" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>